--- a/CNN Complex.ipynb
+++ b/CNN Complex.ipynb
@@ -24,6 +24,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.random.seed(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
     "collapsed": true,
     "scrolled": true
    },
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -229,7 +240,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -286,6 +297,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Play with given data set (mnist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras.datasets import mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# load data\n",
+    "# (X_train, y_train), (X_test, y_test) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -294,40 +353,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from keras.models import Sequential"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "model = Sequential()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stacking layers\n",
+    "from keras.models import Sequential\n",
     "\n",
-    "The layers can be stacked using *add* function"
+    "from keras.layers import Dense\n",
+    "from keras.layers import Dropout\n",
+    "from keras.layers import Flatten\n",
+    "from keras.layers.convolutional import Conv2D\n",
+    "from keras.layers.convolutional import MaxPooling2D\n",
+    "from keras.utils import np_utils\n",
+    "from keras import backend as K\n",
+    "K.set_image_dim_ordering('th')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -340,7 +387,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_classes = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X_train = x_train.reshape(x_train.shape[0], 1, 28, 28).astype('float32')\n",
+    "X_train = X_train / 255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -348,7 +418,8 @@
    "outputs": [],
    "source": [
     "def init_model():\n",
-    "    model.add(Dense(units=10, input_dim=784))\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(units=num_classes, input_dim=784))\n",
     "    model.add(Activation('relu'))\n",
     "    model.add(Dense(units=10))\n",
     "\n",
@@ -363,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -385,10 +456,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define the larger model\n",
+    "def larger_model():\n",
+    "# create model\n",
+    "    model = Sequential()\n",
+    "    model.add(Conv2D(30, (5, 5), input_shape=(1, 28, 28), activation='relu'))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Conv2D(15, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(Flatten())\n",
+    "    model.add(Dense(128, activation='relu'))\n",
+    "    model.add(Dense(50, activation='relu'))\n",
+    "    model.add(Dense(num_classes, activation='softmax'))\n",
+    "    # Compile model\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model = baseline_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -396,95 +504,42 @@
      "output_type": "stream",
      "text": [
       "Train on 33600 samples, validate on 8400 samples\n",
-      "Epoch 1/30\n",
-      "33600/33600 [==============================] - 3s - loss: 2.3301 - acc: 0.1847 - val_loss: 2.0580 - val_acc: 0.2299\n",
-      "Epoch 2/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.9307 - acc: 0.3159 - val_loss: 1.6868 - val_acc: 0.3886\n",
-      "Epoch 3/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.6815 - acc: 0.4063 - val_loss: 1.6495 - val_acc: 0.4373\n",
-      "Epoch 4/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5182 - acc: 0.4656 - val_loss: 1.5153 - val_acc: 0.4849\n",
-      "Epoch 5/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.4737 - acc: 0.4844 - val_loss: 1.4640 - val_acc: 0.4931\n",
-      "Epoch 6/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.4702 - acc: 0.4872 - val_loss: 1.4671 - val_acc: 0.5076\n",
-      "Epoch 7/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.4741 - acc: 0.4823 - val_loss: 1.5114 - val_acc: 0.4824\n",
-      "Epoch 8/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.4956 - acc: 0.4847 - val_loss: 1.5720 - val_acc: 0.4917\n",
-      "Epoch 9/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.4932 - acc: 0.4745 - val_loss: 1.4935 - val_acc: 0.4801\n",
-      "Epoch 10/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5087 - acc: 0.4800 - val_loss: 1.5885 - val_acc: 0.4929\n",
-      "Epoch 11/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.5281 - acc: 0.4774 - val_loss: 1.5311 - val_acc: 0.4710\n",
-      "Epoch 12/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.5075 - acc: 0.4810 - val_loss: 1.4774 - val_acc: 0.4723\n",
-      "Epoch 13/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5412 - acc: 0.4883 - val_loss: 1.5596 - val_acc: 0.4838\n",
-      "Epoch 14/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5436 - acc: 0.4831 - val_loss: 1.5440 - val_acc: 0.4813\n",
-      "Epoch 15/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.5525 - acc: 0.4839 - val_loss: 1.5408 - val_acc: 0.4821\n",
-      "Epoch 16/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5601 - acc: 0.4798 - val_loss: 1.5642 - val_acc: 0.4780\n",
-      "Epoch 17/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.5761 - acc: 0.4784 - val_loss: 1.5766 - val_acc: 0.4626\n",
-      "Epoch 18/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.5639 - acc: 0.4812 - val_loss: 1.6190 - val_acc: 0.4805\n",
-      "Epoch 19/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5867 - acc: 0.4773 - val_loss: 1.5806 - val_acc: 0.4771\n",
-      "Epoch 20/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5779 - acc: 0.4788 - val_loss: 1.5672 - val_acc: 0.4682\n",
-      "Epoch 21/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.5767 - acc: 0.4765 - val_loss: 1.7102 - val_acc: 0.4792\n",
-      "Epoch 22/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.6346 - acc: 0.4838 - val_loss: 1.6062 - val_acc: 0.4860\n",
-      "Epoch 23/30\n",
-      "33600/33600 [==============================] - 2s - loss: 1.6073 - acc: 0.4789 - val_loss: 1.6613 - val_acc: 0.4901\n",
-      "Epoch 24/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.6103 - acc: 0.4838 - val_loss: 1.5904 - val_acc: 0.4811\n",
-      "Epoch 25/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.6387 - acc: 0.4852 - val_loss: 1.7151 - val_acc: 0.4875\n",
-      "Epoch 26/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.6227 - acc: 0.4798 - val_loss: 1.6064 - val_acc: 0.4800\n",
-      "Epoch 27/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.6344 - acc: 0.4781 - val_loss: 1.6333 - val_acc: 0.4717\n",
-      "Epoch 28/30\n",
-      "33600/33600 [==============================] - 3s - loss: 1.6180 - acc: 0.4805 - val_loss: 1.7596 - val_acc: 0.4921\n",
-      "Epoch 29/30\n",
-      "33600/33600 [==============================] - 4s - loss: 1.6437 - acc: 0.4844 - val_loss: 1.8017 - val_acc: 0.4948\n",
-      "Epoch 30/30\n",
-      "33600/33600 [==============================] - 4s - loss: 1.6440 - acc: 0.4843 - val_loss: 1.7950 - val_acc: 0.4879\n"
+      "Epoch 1/10\n",
+      "33600/33600 [==============================] - 130s - loss: 0.3352 - acc: 0.9041 - val_loss: 0.1175 - val_acc: 0.9674\n",
+      "Epoch 2/10\n",
+      "33600/33600 [==============================] - 133s - loss: 0.0968 - acc: 0.9721 - val_loss: 0.0702 - val_acc: 0.9790\n",
+      "Epoch 3/10\n",
+      "33600/33600 [==============================] - 129s - loss: 0.0674 - acc: 0.9805 - val_loss: 0.0572 - val_acc: 0.9825\n",
+      "Epoch 4/10\n",
+      "33600/33600 [==============================] - 130s - loss: 0.0531 - acc: 0.9846 - val_loss: 0.0625 - val_acc: 0.9802\n",
+      "Epoch 5/10\n",
+      "33600/33600 [==============================] - 138s - loss: 0.0419 - acc: 0.9879 - val_loss: 0.0529 - val_acc: 0.9839\n",
+      "Epoch 6/10\n",
+      "33600/33600 [==============================] - 136s - loss: 0.0338 - acc: 0.9893 - val_loss: 0.0461 - val_acc: 0.9865\n",
+      "Epoch 7/10\n",
+      "33600/33600 [==============================] - 134s - loss: 0.0307 - acc: 0.9904 - val_loss: 0.0451 - val_acc: 0.9862\n",
+      "Epoch 8/10\n",
+      "33600/33600 [==============================] - 130s - loss: 0.0249 - acc: 0.9918 - val_loss: 0.0547 - val_acc: 0.9836\n",
+      "Epoch 9/10\n",
+      "33600/33600 [==============================] - 127s - loss: 0.0208 - acc: 0.9934 - val_loss: 0.0390 - val_acc: 0.9886\n",
+      "Epoch 10/10\n",
+      "33600/33600 [==============================] - 127s - loss: 0.0169 - acc: 0.9949 - val_loss: 0.0466 - val_acc: 0.9856\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2425e010e80>"
+       "<keras.callbacks.History at 0x2572b993cc0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# learn dl model\n",
-    "model.fit(x_train, y_labels, epochs=30, batch_size=32, validation_split=0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras.utils import plot_model\n",
-    "# plot_model(model, to_file='F:/mnist/data/model.png')"
+    "model.fit(X_train, y_labels, epochs=10, batch_size=200, validation_split=0.2)"
    ]
   },
   {
@@ -499,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -521,7 +576,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_test = x_test.reshape(x_test.shape[0], 1, 28, 28).astype('float32')\n",
+    "X_test = X_test / 255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -540,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -549,17 +616,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26304/28000 [===========================>..] - ETA: 0s"
+      "28000/28000 [==============================] - 50s    \n"
      ]
     }
    ],
    "source": [
-    "df_submission = get_submission_df(model, x_test)"
+    "df_submission = get_submission_df(model, X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
